fix: adjust ExitDraftLink z-index

--- a/src/components/ui/ExitDraftLink/ExitDraftLink.module.scss
+++ b/src/components/ui/ExitDraftLink/ExitDraftLink.module.scss
@@ -1,5 +1,6 @@
 .link {
   position: fixed;
+  z-index: 99999;
   right: 0;
   bottom: 0;
 
